Update patch projects & client
